--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-123
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+  <h1>BTS</h1>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html><!DOCTYPE html>
